add card js render, styles

--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Tiny World</title>
+    <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css">
     <link rel="stylesheet" href="style.css">
+    <title>JS Tiny Underwater World</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="title">This is JavaScript underwater tiny world</h1>
+        <h2 class="subtitle">Long long time ago...diver, clownfish, dolphin, shark and Napoleon</h2>
+        <button id="start" class="get-started button button-primary button-large">Press button to start</button>
+    </header>
+    <div id="main" class="container">
+        <div class="row">
+            <!-- <div class="col col-md-6">
+                <div class="card">
+                    <h3 class="card-title">Example Card 2</h3>
+                    This is an example of a card. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quasi ipsam sint alias, nemo. Dolore minus aliquid, modi debitis adipisci vel amet, sit officia placeat?
+                    <img src="img/png-transparent-underwater-diving-scuba-diving-diving-equipment-dive-center-others-wetsuit-electric-blue-personal-protective-equipment.png" alt="">
+                    <ul class="card-actions">
+                      <li><button class="button-primary">Only 1 Action</button></li>
+                    </ul>
+                  </div>
+            </div> -->
+        </div>
+    </div>
 
-
-
+    <footer></footer>
     <script src="index.js"></script>
 </body>
 </html>
