add styles | add new voices

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
         </div>
     </div>
 
-    <footer></footer>
+    <footer>
+        &copy; Bogdan Shcahvinskyi
+        <ul>
+            <li class="list_item">
+                <a href="https://www.facebook.com/maiskiychavk" class="link_item"><img src="icons/facebook.svg" alt=""></a>
+            </li>
+            <li class="list_item">
+                <a href="https://github.com/master-bogdan" class="link_item"><img src="icons/github.svg" alt=""></a>
+            </li>
+        </ul>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
