--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="title">This is JavaScript underwater tiny world</h1>
         <h2 class="subtitle">Long long time ago...diver, clownfish, dolphin, shark and Napoleon</h2>
-        <button id="start" class="get-started button button-primary button-large">Press button to start</button>
+        <a href="#main" id="start" class="get-started button button-primary button-large">Press button to start</a>
     </header>
     <div id="main">
         <div class="container">
@@ -31,7 +31,7 @@
     </div>
 
     <footer>
-        &copy; Bogdan Shcahvinskyi
+        &copy; Bogdan Shchavinskyi
         <ul>
             <li class="list_item">
                 <a href="https://www.facebook.com/maiskiychavk" class="link_item"><img src="icons/facebook.svg" alt=""></a>
